force-app/main/default/objects/InUpsertExport__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Total__c</fullName>
        <label>Final Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GST__c</fullName>
        <formula>Amount__c  * 0.28</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_del__c</fullName>
        <label>Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL__c</fullName>
        <formula>Amount__c  +   GST__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>InUpsertExport</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Name_del__c</columns>
        <columns>Price__c</columns>
        <columns>Quantity__c</columns>
        <columns>Amount__c</columns>
        <columns>GST__c</columns>
        <columns>TOTAL__c</columns>
        <columns>Discount__c</columns>
        <columns>Final_Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>InUpsertExport Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InUpExsert</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>